--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js" type="module"></script>"
 </head>
 <body>
     <main>
         <div class="Mestre">
             <div class="Tela">
-                <img><p>Resultado...</p></img:>
+                <img><p>0</p></img:>
             </div>
             <div class="Teclado">
                 <div class="TecladoNumerico">
@@ -31,6 +32,8 @@
                     <button>x</button>
                     <button>/</button>
                     <button>=</button>
+                    <button>del</button>
+                    <button>.</button>
                 </div>
             </div>
         </div>
