--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <button>x</button>
                     <button>/</button>
                     <button>=</button>
-                    <button>del</button>
+                    <button>AC</button>
                     <button>.</button>
                 </div>
             </div>
